// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IsFalseAnd should accept functions as condition 1`] = `
<Fragment>
  <span
    id="show"
  >
    works
  </span>
</Fragment>
`;

exports[`IsFalseAnd should return children 1`] = `
<span>
  test
</span>
`;

exports[`IsFalseAnd should show if condition is falsy (F)[T] 1`] = `
<Fragment>
  <span
    id="show"
  >
    works
  </span>
</Fragment>
`;

exports[`IsFalseAnd should show nothing if condition is falsy but component condition is false (F)[F] 1`] = `<Fragment />`;

exports[`IsFalseAnd should show nothing if condition is truthy (T)[T,F] 1`] = `<Fragment />`;

exports[`IsFalseAnd should show only true conditions and in order (F)[T,F,T,F,T] 1`] = `
<Fragment>
  <span
    id="show"
  >
    works
  </span>
  <span
    id="show3"
  >
    works
  </span>
  <span
    id="show5"
  >
    works
  </span>
</Fragment>
`;

exports[`IsTrue should return children 1`] = `
<span>
  test
</span>
`;

exports[`IsTrue should show if condition is truthy 1`] = `
<Fragment>
  <span
    id="show"
  >
    works
  </span>
</Fragment>
`;

exports[`IsTrue should show nothing if condition is falsy 1`] = `<Fragment />`;

exports[`OrElse should return children 1`] = `
<span>
  test
</span>
`;

exports[`OrElse should show if condition is falsy 1`] = `
<Fragment>
  <span
    id="show"
  >
    works
  </span>
</Fragment>
`;

exports[`OrElse should show nothing if condition is truthy 1`] = `<Fragment />`;

exports[`ShowIf should accept functions as condition 1`] = `
<div>
  <ShowIf
    condition={[Function]}
  >
    <IsTrue>
      <span
        id="show"
      >
        works
      </span>
    </IsTrue>
  </ShowIf>
  <ShowIf
    condition={[Function]}
  >
    <OrElse>
      <span
        id="show2"
      >
        works
      </span>
    </OrElse>
  </ShowIf>
</div>
`;
